--- a/404.html
+++ b/404.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <title>404 Error</title>
    <meta charset="UTF-8">
-   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <meta name="author" content="Swarup Kumar">
+
+  <meta name="author" content="MD Taseen Khan">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'><link rel="stylesheet" href="./nai.css">
 
 </head>
@@ -333,7 +333,8 @@
 </div>
   </a>
 <!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.min.js'></script><script  src="./nai.js"></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.min.js'></script>
+  <script  src="./nai.js"></script>
 
 </body>
 </html>
