--- a/index.html
+++ b/index.html
@@ -5,9 +5,57 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Alam Khan</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+
+
+
+  <!-- Primary Meta Tags -->
+  <title>Alam Khan - Profile</title>
+  <meta name="title" content="Alam Khan - Profile">
+  <meta name="description" content="I have 21 years working experience in the development sector mainly in the field of natural resources
+  management, livelihoods and food security sector. I have been working with natural resources dependent
+  communities specially forest dependent communities for forest protection, restoration and conservation
+  under Co-management/collaborative forest management modality mainly in Cox’s Bazar District since 2013
+  under USAID funded CREL project, World Bank funded SUFAL Project etc. I have worked with 46 CBOs
+  (Village Conservation Groups under 3 Ecologically Critical Areas (ECA) and 6 Co-Management
+  Committees and 205 Village Conservation Forums (VCF) under Cox’s Bazar District. I have mobilized
+  around 251 forest dependent groups and promoted with different capacity building trainings and IGAs etc.
+  I have been engaged forest dependent communities for their involvement in forest protection through
+  institute formation, capacity building and alternate livelihoods options.">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://alam-khan.vercel.app/">
+  <meta property="og:title" content="Alam Khan - Profile">
+  <meta property="og:description" content="I have 21 years working experience in the development sector mainly in the field of natural resources
+  management, livelihoods and food security sector. I have been working with natural resources dependent
+  communities specially forest dependent communities for forest protection, restoration and conservation
+  under Co-management/collaborative forest management modality mainly in Cox’s Bazar District since 2013
+  under USAID funded CREL project, World Bank funded SUFAL Project etc. I have worked with 46 CBOs
+  (Village Conservation Groups under 3 Ecologically Critical Areas (ECA) and 6 Co-Management
+  Committees and 205 Village Conservation Forums (VCF) under Cox’s Bazar District. I have mobilized
+  around 251 forest dependent groups and promoted with different capacity building trainings and IGAs etc.
+  I have been engaged forest dependent communities for their involvement in forest protection through
+  institute formation, capacity building and alternate livelihoods options.">
+  <meta property="og:image" content="https://alam-khan.vercel.app/assets/img/favicon.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://alam-khan.vercel.app/">
+  <meta property="twitter:title" content="Alam Khan - Profile">
+  <meta property="twitter:description" content="I have 21 years working experience in the development sector mainly in the field of natural resources
+  management, livelihoods and food security sector. I have been working with natural resources dependent
+  communities specially forest dependent communities for forest protection, restoration and conservation
+  under Co-management/collaborative forest management modality mainly in Cox’s Bazar District since 2013
+  under USAID funded CREL project, World Bank funded SUFAL Project etc. I have worked with 46 CBOs
+  (Village Conservation Groups under 3 Ecologically Critical Areas (ECA) and 6 Co-Management
+  Committees and 205 Village Conservation Forums (VCF) under Cox’s Bazar District. I have mobilized
+  around 251 forest dependent groups and promoted with different capacity building trainings and IGAs etc.
+  I have been engaged forest dependent communities for their involvement in forest protection through
+  institute formation, capacity building and alternate livelihoods options.">
+  <meta property="twitter:image" content="https://alam-khan.vercel.app/assets/img/favicon.png">
+
+
+
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -626,7 +674,7 @@
         &copy; Copyright <strong><span>Alam Khan</span></strong>
       </div>
       <div class="credits">
-       
+
         Designed by <a href="https://md-taseen-khan.vercel.app" rel="sponsored">MD Taseen Khan</a>
       </div>
     </div>
