--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Alam Khan</h1>
-      <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p>
+      <p>I'm Expert in <span class="typed" data-typed-items="Natural Resource Management"></span></p>
     </div>
   </section><!-- End Hero -->
 
