--- a/index.html
+++ b/index.html
@@ -128,7 +128,16 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>I have 21 years working experience in the development sector mainly in the field of natural resources
+management, livelihoods and food security sector. I have been working with natural resources dependent
+communities specially forest dependent communities for forest protection, restoration and conservation
+under Co-management/collaborative forest management modality mainly in Cox’s Bazar District since 2013
+under USAID funded CREL project, World Bank funded SUFAL Project etc. I have worked with 46 CBOs
+(Village Conservation Groups under 3 Ecologically Critical Areas (ECA) and 6 Co-Management
+Committees and 205 Village Conservation Forums (VCF) under Cox’s Bazar District. I have mobilized
+around 251 forest dependent groups and promoted with different capacity building trainings and IGAs etc.
+I have been engaged forest dependent communities for their involvement in forest protection through
+institute formation, capacity building and alternate livelihoods options.</p>
         </div>
 
         <div class="row">
@@ -136,23 +145,26 @@
             <img src="assets/img/apple-touch-icon.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>UI/UX Designer &amp; Web Developer.</h3>
+            <h3>Natural Resource Management Expert</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Natural Resource related project management, Climate Change, Environmental Impact Assessment, Forest
+and wildlife conservation and protection through ecosystems and watershed management, community
+enthusiasm, group formation, Institution formation, Org. dev. and capacity building, Participatory Climate
+Vulnerability Assessment, nursery raising, horticulture, value chainand market linkages, Disaster management
+training facilitation and research etc
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
+
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>alam-khan.vercel.app</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+8801818152374</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Dhaka, Bangladesh</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Working Experience:</strong> <span>21 Years</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>email@example.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
@@ -617,7 +629,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>akforestcu90@gmail.com</p>
+                <p><a href="mailto:akforestcu90@gmail.com">akforestcu90@gmail.com</a></p>
               </div>
 
               <div class="phone">
